// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`invoice sum calculator correctly summarizes multiple rows 1`] = `
Object {
  "invoiceRows": Array [
    Object {
      "describe": "asd",
      "price": 550,
      "tax": 0.25,
      "total": 550,
      "unit": 1,
    },
    Object {
      "describe": "asd",
      "price": 550,
      "tax": 0.25,
      "total": 550,
      "unit": 1,
    },
  ],
  "netTotal": 1100,
  "taxTotal": 275,
  "total": 1375,
}
`;

exports[`invoice sum calculator returns the correct amounts for complete row 1`] = `
Object {
  "invoiceRows": Array [
    Object {
      "describe": "asd",
      "price": 550,
      "tax": 0.25,
      "total": 1100,
      "unit": 2,
    },
  ],
  "netTotal": 1100,
  "taxTotal": 275,
  "total": 1375,
}
`;

exports[`invoice sum calculator uses default tax if no tax is given for row 1`] = `
Object {
  "invoiceRows": Array [
    Object {
      "describe": "asd",
      "price": 550,
      "total": 1100,
      "unit": 2,
    },
  ],
  "netTotal": 1100,
  "taxTotal": 275,
  "total": 1375,
}
`;

exports[`invoicerows toJson() returns an pure object 1`] = `
Object {
  "companyCustomerId": undefined,
  "createdAt": Any<Number>,
  "invoiceRows": Array [
    Object {
      "id": 1,
    },
  ],
  "locked": true,
  "recipients": Array [],
  "status": Array [
    Object {
      "createdAt": Any<Number>,
    },
  ],
}
`;
